# python-berhinger-xtouchmini

./: CHANGELOG.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: test.py
src/XTouchMini/: DeviceManager.py  __init__.py
src/XTouchMini/Devices/: xtouchmini-makie.txt  xtouchmini.py
